--- a/Assets/Zebug/Editor/ZebugEditorWindow.uxml
+++ b/Assets/Zebug/Editor/ZebugEditorWindow.uxml
@@ -2,7 +2,7 @@
     <ui:Button text="Refresh Window" class="zebug-refresh-window-button">
         <Style src="ZebugEditorWindow.uss" />
     </ui:Button>
-    <ZebugChannelFoldout text="ChannelName" class="test-color">
+    <ZebugChannelFoldout text="ChannelName" class="test-color disabled">
         <Style src="ZebugEditorWindow.uss" />
         <ZebugChannelFoldout text="ChannelName" />
         <ZebugChannelFoldout text="ChannelName" />
