--- a/Packages/com.zebugger.zebug/Editor/UI/ZebugEditorWindow.uxml
+++ b/Packages/com.zebugger.zebug/Editor/UI/ZebugEditorWindow.uxml
@@ -1,8 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
-    <ui:Button text="Refresh Window" class="zebug-refresh-window-button">
+    <ui:Label text="Debug Channels" class="fancy-label" style="font-size: 18px;">
+        <Style src="ZebugEditorWindow.uss" />
+    </ui:Label>
+    <ui:Button text="Refresh Window" class="zebug-refresh-window-button disabled">
         <Style src="ZebugEditorWindow.uss" />
     </ui:Button>
-    <ZebugChannelFoldout text="ChannelName" class="test-color disabled">
+    <ZebugChannelFoldout text="ChannelName" class="test-color">
         <Style src="ZebugEditorWindow.uss" />
         <ZebugChannelFoldout text="ChannelName" />
         <ZebugChannelFoldout text="ChannelName" />
