--- a/Packages/com.zebugger.zebug/Editor/UI/ZebugEditorWindow.uxml
+++ b/Packages/com.zebugger.zebug/Editor/UI/ZebugEditorWindow.uxml
@@ -5,7 +5,7 @@
     <ui:Button text="Refresh Window" class="zebug-refresh-window-button disabled">
         <Style src="ZebugEditorWindow.uss" />
     </ui:Button>
-    <ZebugChannelFoldout text="ChannelName" class="test-color">
+    <ZebugChannelFoldout text="ChannelName" class="test-color disabled">
         <Style src="ZebugEditorWindow.uss" />
         <ZebugChannelFoldout text="ChannelName" />
         <ZebugChannelFoldout text="ChannelName" />
